# tile-fusion

./: .gitignore  .gitmodules  README.md
binding-project/: CMakeLists.txt  binding_benchmark.py  main.cpp  run_binding_benchmark.sh  run_icelake.sh  test_lib.py
binding-project/gcn-e2e-training/: FusedGCNLayer.py  FusedGCNModule.py  fused-gcn-training.py  gcn-dgl.py  gcn-pyg.py
binding-project/include/: Functions.h
binding-project/scripts/: dl_dgl_graphs.py  dl_pyg_graphs.py  ogb_converter.py
binding-project/src/: Functions.cpp
codegen/: README.md  SMT_solvers_demo.py  dependency_extraction.py  equality_example.py  numba_pass.py  requirements.txt  spmv_spmv_codegen.py  tri_count.py  unsat_example.py  writer.py
codegen/triton/: gemm-spmm-performance.csv  gemm.py  requirements.txt  results.html  run_exp_slurm.sh  sddmm.py  sddmm_spmm.py  spmm.py  spmm_gemm.py  triton_examples.py  utils.py
fusion/: CMakeLists.txt  README.md  gpu_spmm_benchmark.sh  requirements.txt  run.sh  run_gcn_demo.sh  run_gcn_e2e.sh  run_mist.sh  run_narval.sh  run_narval_array_jobs.sh  run_narval_gpu.sh  run_niagara.sh  run_niagara_array_jobs.sh  run_scalability_narval.sh  run_scalabity_niagara.sh  run_scalibity_niagara.sh  test_papi.sh  test_papi_narval.sh
fusion/demo/: SpMMCudaDemo.cu
fusion/example/: Avx_Demo.cpp  CMakeLists.txt  Fused_vs_MKL_Demo.cpp  Fusion_Profiler.cpp  GCN_Layer_Demo.cpp  GCN_Layer_Demo_Utils.h  GCN_Layer_MKL_Demo.h  GCN_Layer_MKL_Forward_Utils.h  GNN_GCN_Demo.cpp  SpMM_Demo.cpp  SpMM_SpMM_Avx_Demo_Utils.h  SpMM_SpMM_Demo.cpp  SpMM_SpMM_Demo_Utils.cpp  SpMM_SpMM_Demo_Utils.h  SpMM_SpMM_MKL_Demo.cpp  SpMM_SpMM_MKL_Demo_Utils.h  SpMM_SpMM_PAPI_Demo.cpp  SpMM_SpMM_SP_Demo.cpp  SpMM_SpMM_SP_Demo_Utils.h  SpMM_SpMM_Tutorial_Demo.cpp  dag_decomposition_demo.cpp
fusion/gcn/: CMakeLists.txt  GCN_Def.h  GCN_Layer_Demo.cpp  GCN_Layer_Demo_Utils.h  GCN_Layer_Forward_Utils.h  GCN_Layer_MKL_Forward_Utils.h  GCN_Verify_With_PyG_Demo.cpp  GNN_GCN_Demo.cpp  gemm_spmm_codegen.h
fusion/gcn/Inspection/: Fusion_Inspector.h  GraphColoring.h
fusion/gcn/MultiLayer/: Fusion_Inspector.h  GCN_Multi_Layer_Demo.cpp  GCN_Multi_Layer_Demo_Utils.h  GNN_GCN_Demo.cpp
fusion/gcn/Sampling/: GCN_Sampling_Demo.h
fusion/gcn/SingleLayer/: GCN_Layer_Demo.cpp  GCN_Layer_SP_Demo.cpp  GCN_Single_Layer_Demo_Utils.h  GCN_Single_Layer_SP_Demo_Utils.h
fusion/gpu/: Benchmarks.h  CMakeLists.txt  Cuda_GeMM_Demo_Utils.h  Cuda_GeMM_SpMM_Demo_Utils.h  Cuda_SpMM_Demo_Utils.h  Cuda_SpMM_SpMM_Demo_Utils.h  Cuda_SpMM_SpMM_fp16_Demo_Utils.h  GeMM_Kernels.cuh  SW_SpMM_Kernels.h  SpMMCudaDemo.cu  SpMMSpMMCudaDemo.cu  SpMM_Kernels.h
fusion/gpu/demo/: ClusterGroupTest.cu  DummyBenchmark.cu  GeMMCudaDemo.cu  GeMMSpMMCudaDemo.cu  SeqReduceBlockDemo.cu  SpMMCudaDemo.cu  SpMMSpMMCudaDemo.cu  SpMMSpMMFp16CudaDemo.cu
fusion/include/sparse-fusion/: DAG.h  Fusion_Defs.h  Fusion_Inspector.h  Fusion_Utils.h  GCNConv.h  GeMM.h  MultiDimensionalSet.h  SpMM_SpMM.h  SpMM_SpMM_vectorized.h  SparseFusion.h  SparseFusionWithRedundancy.h  Utils.h
fusion/jacobi/: CMakeLists.txt  jacobi.h  jacobi_demo.cpp  jacobi_demo_utils.h
fusion/pyg/banded/: mat_list.txt  tri-banded-10.mtx  tri-banded-1000.mtx  tri-banded-10000.mtx  tri-banded-16.mtx  tri-banded-5000.mtx
fusion/scripts/: all-ss.txt  banded_list.txt  cost_analysis.py  dl_matrix.py  dl_pyg_graphs.py  dlmc_magnitude_90_98.txt  find_banded_matrices.py  fixed_variable_tile_speedup.py  fused_ratio.py  gen_matrix.py  gen_matrix_folder.py  get_dlmc_list.py  graph_list.txt  mat_list.txt  ogb_converter.py  ogbn_converter.py  plot.py  plot_banded.py  plot_example.py  plot_gcn.py  plot_gpu_spmm_benchmark.py  plot_gpu_su_gflops.py  profiling_analysis.py  pyg_data_exporter.py  reorder_graphs.py  run_exp.sh  spd_list.txt  split_mat_list.sh  spmm_spmm_plot.py
fusion/scripts/plot_gpu/: cuSparse_conf.yaml  fused_conf.yaml  fused_ratio_conf.yaml  fused_tuning_conf.yaml  gemm_spmm_tuned.yaml  seq_red_conf.yaml  spmm_conf.yaml  tile_size_group.yaml  wsm_ex_conf.yaml
fusion/scripts/plotter/: fusion_ratio.py  graphs_list.txt  inspector_analysis.py  multi_layer_config.yaml  plot_e2e.py  plot_gcn.py  plot_scalability.py  plot_single_plot.py  plot_spmm_spmm.py  single_layer_config.yaml  spd_graphs_list.txt  spd_list.txt  spmm_spmm_config.yaml  spmv_spmv_config.yaml
fusion/sparse-tiling/: sparse-tiling.h
fusion/spmv-spmv/: CMakeLists.txt  SpMV_SpMV.h  SpMV_SpMV_Demo.cpp  SpMV_SpMV_Demo_Utils.h  SpMV_SpMV_MKL_Demo_Utils.h
fusion/src/: DAG.cpp  Fusion_Defs.cpp  Fusion_Utils.cpp  GCNConv.cpp  GeMM.cpp  MultiDimensionalSet.cpp  SpMM_SpMM.cpp  SpMM_SpMM_vectorized.cpp  SparseFusion.cpp  SparseFusionWithRedundancy.cpp  Utils.cpp
fusion/torch/: Backend_Utils.h  CMakeLists.txt  E2D_Def.h  E2E_IO.h  FusedGCNForward.h  FusedGCNLayerModule.h  FusionWrapper.h  GCNIntegratedTraining.cpp  GCNModule.h  TorchWrapperBenchmark.cpp  Torch_GCN_Layer_Utils.h  gcn-training-example-DGL.py  gcn-training-example-pyg.py  main.cpp  torchTest.cpp
fusion/torch/binding-project/: CMakeLists.txt  binding_benchmark.py  main.cpp  run_binding_benchmark_niagara.sh  test_lib.py
fusion/torch/binding-project/include/: Functions.h
fusion/torch/binding-project/src/: Functions.cpp
fusion/torch/inspection/: GraphColoring.h  Inspection.h
modeling/: README.md  SAGEGraph  SAGEGraph-custom  SAGEGraph-reference  environment.yml  gcn_layer.py  graph_sampling.py  pyg_data_exporter.py  run-gcn-training.sh
modeling/GCN/: gcn-training-example-DGL.py  gcn-training-example-pyg.py  train.py
modeling/GCN/custom/: GCNConv.py  model.py
modeling/GCN/pyG/: model.py
modeling/GNN-Bench/: GCN-reddit.py  bench.py
modeling/SAGEGraph/: SAGEConv.py  SAGEGraph.py
modeling/SAGEGraph-GCN/: README.md  SAGEConv.py  SAGEGraph  SAGEGraph.py  graphsage_prototype.py  train.py
modeling/graphsage/: graphsage_custom.py  model.py  sage-training-example-pyg.py  train.py
modeling/graphsage/reference/: model.py
